Fixed theming issue with examples filling up too much.

--- a/templates/html/.partials/schema-prop.html
+++ b/templates/html/.partials/schema-prop.html
@@ -85,7 +85,7 @@
           <div class="text-xs">
             Enum:
             {% for value in prop.enum() %}
-              <span class="border text-orange rounded ml-1 py-0 px-2">{{value | dump}}</span>
+              <span class="border text-orange rounded ml-1 py-0 px-2">{{value | dump(2) | safe }}</span>
             {% endfor %}
           </div>
         {% endif %}
@@ -93,7 +93,7 @@
           <div class="text-xs">
             Examples:
             {% for value in prop.examples() %}
-              <span class="border text-orange rounded ml-1 py-0 px-2">{{value | dump}}</span>
+              <span class="border text-orange rounded ml-1 py-0 px-2">{{value | dump(2) | safe }}</span>
             {% endfor %}
           </div>
         {% endif %}
