Fixed the channel partials was not used correctly.

--- a/templates/nats-ts/.partials/channel/reply.ts.njk
+++ b/templates/nats-ts/.partials/channel/reply.ts.njk
@@ -1,32 +1,34 @@
 
-{% macro reply(channel, channelName, payload, encoding) %}
+{% macro reply(channel, channelName, server) %}
 export function reply(onRequest: (err?: NatsError, msg?: {{channel.subscribe().message(0).name() | camelCase}}) => {{channel.publish().message(0).name() | camelCase}}, onReplyError: (err: NatsError) => void, nc?: Client): Promise<Subscription> {
   return new Promise(async (resolve, reject) => {
     if (nc) {
       try {
 
         let subscribeOptions: SubscriptionOptions = {};
-        {%- if channel.subscribe().bindings().queue() | length %}
+        {%- if channel.subscribe().message(0) | hasNatsBindings %}
+        {%- if channel.subscribe().message(0).bindings().nats().queue() | length %}
         //If queue
-        subscribeOptions.queue = '{{channel.subscribe().bindings().queue().name()}}';
+        subscribeOptions.queue = '{{channel.subscribe().message(0).bindings().nats().queue().name()}}';
         {%- endif %}
-        {%- if channel.subscribe().bindings().unsubAfter() | length %}
+        {%- if channel.subscribe().message(0).bindings().nats().unsubAfter() | length %}
         //If unsubafter
-        subscribeOptions.max = {{channel.subscribe().bindings().unsubAfter()}};
+        subscribeOptions.max = {{channel.subscribe().message(0).bindings().nats().unsubAfter()}};
+        {%- endif %}
         {%- endif %}
 
         let subscription = nc.subscribe('{{channelName}}', (err, msg) => {
           if (err) {
             onRequest(err);
           } else {
-            let processedData = utils.processRecievedData(msg.data, Payload.{{payload}}, '{{encoding}}');
+            let processedData = utils.processRecievedData(msg.data, Payload.{{server | tsPayload}}, '{{server | tsEncoding}}');
             let requestData = new {{channel.subscribe().message(0).name() | camelCase}}();
             requestData.copyFrom(processedData);
 
             let responseObject = onRequest(undefined, requestData);
             if (msg.reply) {
               try {
-                let requestData = utils.beforeResponse(responseObject, Payload.{{payload}}, '{{encoding}}');
+                let requestData = utils.beforeResponse(responseObject, Payload.{{server | tsPayload}}, '{{server | tsEncoding}}');
                 nc.publish(msg.reply, requestData);
               } catch (e) {
                 if (onReplyError) {
