--- a/templates/nats-ts/.partials/channel/publish.ts.njk
+++ b/templates/nats-ts/.partials/channel/publish.ts.njk
@@ -1,11 +1,11 @@
 
-{% macro publish(channelName, publishOperation, payload, encoding) %}
+{% macro publish(channel, channelName, server) %}
 
-export function publish(requestMessage: {{publishOperation.message(0).name() | camelCase}}, nc?: Client): Promise<void> {
+export function publish(requestMessage: {{channel.publish().message(0).name() | camelCase}}, nc?: Client): Promise<void> {
   return new Promise(async (resolve, reject) => {
     if (nc) {
       try{
-        let dataToPublish = utils.beforePublish(requestMessage, Payload.{{payload}}, '{{encoding}}');
+        let dataToPublish = utils.beforePublish(requestMessage, Payload.{{server | tsPayload}}, '{{server | tsEncoding}}');
         nc.publish('{{channelName}}', dataToPublish);
         resolve();
       }catch(e){
