--- a/templates/nats-ts/src/channels/$$channel$$.njk
+++ b/templates/nats-ts/src/channels/$$channel$$.njk
@@ -4,10 +4,10 @@
 {%- from "../../.partials/channel/request.njk" import request %}
 {%- from "../../.partials/channel/subscribe.njk" import subscribe %}
 {%- if channel.hasPublish() %}
-import {{ channel.publish().message(0).uid() | camelCase }} from '../message/{{ channel.publish().message(0).uid() | kebabCase}}'
+import {{ channel.publish().message(0).uid() | camelCase }} from '#messages/{{ channel.publish().message(0).uid() | kebabCase}}'
 {%- endif %}
 {%- if channel.hasSubscribe() %}
-import {{ channel.subscribe().message(0).uid() | camelCase }} from '../message/{{ channel.subscribe().message(0).uid() | kebabCase}}'
+import {{ channel.subscribe().message(0).uid() | camelCase }} from '#messages/{{ channel.subscribe().message(0).uid() | kebabCase}}'
 {%- endif %}
 
 import { Client, NatsError, Subscription, SubscriptionOptions, Payload } from 'ts-nats';
