Changed to use uid and not name.

--- a/templates/nats-ts/.partials/channel/publish.njk
+++ b/templates/nats-ts/.partials/channel/publish.njk
@@ -1,7 +1,7 @@
 
 {% macro publish(channel, channelName, server) %}
 
-export function publish(requestMessage: {{channel.publish().message(0).name() | camelCase}}, nc?: Client): Promise<void> {
+export function publish(requestMessage: {{channel.publish().message(0).uid() | camelCase}}, nc?: Client): Promise<void> {
   return new Promise(async (resolve, reject) => {
     if (nc) {
       try{
