--- a/templates/nats-ts/.partials/channel/request.njk
+++ b/templates/nats-ts/.partials/channel/request.njk
@@ -1,6 +1,6 @@
 
 {% macro request(channel, channelName, server) %}
-export function request(requestMessage: {{channel.publish().message(0).name() | camelCase}}, nc?: Client): Promise<{{channel.subscribe().message(0).name() | camelCase}}> {
+export function request(requestMessage: {{channel.publish().message(0).uid() | camelCase}}, nc?: Client): Promise<{{channel.subscribe().message(0).uid() | camelCase}}> {
   return new Promise(async (resolve, reject) => {
     if (nc) {
       try {
@@ -10,7 +10,7 @@ export function request(requestMessage: {{channel.publish().message(0).name() | 
             reject(err);
           } else {
             let processedData = utils.processRecievedData(msg.data, Payload.{{server | tsPayload}}, '{{server | tsEncoding}}');
-            let response = new {{channel.subscribe().message(0).name() | camelCase}}();
+            let response = new {{channel.subscribe().message(0).uid() | camelCase}}();
             response.copyFrom(processedData);
             resolve(response);
           }
