Revert "remove examples from schema/operation as it is duplicates content of the examples panel"
This reverts commit db67380cc7c0121fc27367e4efa1fe419fa7c51f.

--- a/templates/html/.partials/schema-prop.html
+++ b/templates/html/.partials/schema-prop.html
@@ -89,6 +89,14 @@
             {% endfor %}
           </div>
         {% endif %}
+        {% if prop.examples() %}
+          <div class="text-xs">
+            Examples:
+            {% for value in prop.examples() %}
+              <span class="border text-orange rounded ml-1 py-0 px-2">{{value | dump(2) | safe }}</span>
+            {% endfor %}
+          </div>
+        {% endif %}
       </div>
     </div>
 
