--- a/templates/nats-ts/.partials/channel/publish.njk
+++ b/templates/nats-ts/.partials/channel/publish.njk
@@ -1,7 +1,7 @@
 
-{% macro publish(channel, channelName, server) %}
+{% macro publish(channelName, publishMessage, server) %}
 
-export function publish(requestMessage: {{channel.publish().message(0).uid() | pascalCase}}Message, nc?: Client): Promise<void> {
+export function publish(requestMessage: {{publishMessage.uid() | pascalCase}}Message, nc?: Client): Promise<void> {
   return new Promise(async (resolve, reject) => {
     if (nc) {
       try{
